Fix error when no app icon present Fix left alignment of table data on app page

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1173,7 +1173,7 @@ a.linkIcon .ui-icon-triangle-1-w { background-position: -102px -15px; }
 }
 
 .dataTable .appData-icon-none {
-  padding-right: 11px;
+  margin-right: 11px;
   height:45px;
   width: 45px;
 }
